avoid wrapping of duckduckgo label

--- a/testing/inline.css
+++ b/testing/inline.css
@@ -19,6 +19,9 @@ table.comparison-table tr th.table-header {
   padding: 10px 0px;
   z-index: 1;
 }
+table.comparison-table tr th.table-header:not(:first-child) {
+  white-space: nowrap;
+}
 table.comparison-table tr:first-child th:first-child {
   z-index: 2;
 }
